--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 <div class="menu-two"> <!--  right side  features link    -->
 
-  <div class="menu"><div class="menu-img"> <img src="/data/calendar.png" width="70%" alt=""></div> <div class="menu-name">Time-tabel</div>  </div>
+  <div class="menu" id="timeTabel"><div class="menu-img"> <img src="/data/calendar.png" width="70%" alt=""></div> <div class="menu-name">Time-tabel</div>  </div>
   <div class="menu"><div class="menu-img"> <img src="/data/notification.png" width="70%" alt=""></div> <div class="menu-name">Notification</div>  </div>
   <div class="menu"><div class="menu-img"> <img src="/data/stamp.png" width="70%" alt=""></div> <div class="menu-name">Mark</div>  </div>  
 </div>
