ad under construction page

--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
 
   <div class="menu-one"> <!--   left side features link -->
 
-  <div class="menu"><div class="menu-img"> <img src="/data/e-learning.png" width="70%" alt=""></div> <div class="menu-name">Classes</div>  </div>
-  <div class="menu"><div class="menu-img"> <img src="/data/notepad.png" width="70%" alt=""></div> <div class="menu-name">Notes</div>  </div>
-  <div class="menu"><div class="menu-img"> <img src="/data/report.png" width="70%" alt=""></div> <div class="menu-name">Attendance</div>  </div>
+  <div class="menu" id="liveClass"><div class="menu-img"> <img src="/data/e-learning.png" width="70%" alt=""></div> <div class="menu-name">Classes</div>  </div>
+  <div class="menu" id="notes"><div class="menu-img"> <img src="/data/notepad.png" width="70%" alt=""></div> <div class="menu-name">Notes</div>  </div>
+  <div class="menu" id="attendance"><div class="menu-img"> <img src="/data/report.png" width="70%" alt=""></div> <div class="menu-name">Attendance</div>  </div>
 </div> 
 
 <div class="menu-two"> <!--  right side  features link    -->
 
   <div class="menu" id="timeTabel"><div class="menu-img"> <img src="/data/calendar.png" width="70%" alt=""></div> <div class="menu-name">Time-tabel</div>  </div>
-  <div class="menu"><div class="menu-img"> <img src="/data/notification.png" width="70%" alt=""></div> <div class="menu-name">Notification</div>  </div>
-  <div class="menu"><div class="menu-img"> <img src="/data/stamp.png" width="70%" alt=""></div> <div class="menu-name">Mark</div>  </div>  
+  <div class="menu" id="notification"><div class="menu-img"> <img src="/data/notification.png" width="70%" alt=""></div> <div class="menu-name">Notification</div>  </div>
+  <div class="menu" id="mark"><div class="menu-img"> <img src="/data/stamp.png" width="70%" alt=""></div> <div class="menu-name">Mark</div>  </div>  
 </div>
 
  </div>
@@ -227,5 +227,6 @@
 
 <script src="/js/main.js"></script>
 <script src="/js/api.js"></script>
+<script src="/js/link.js"></script>
 </body>
 </html>
