--- a/underwork.html
+++ b/underwork.html
@@ -68,7 +68,7 @@
 
         <div class="unde-work-text">
             <h1>Under Construction</h1>
-            <p>Sorry, this page is currently under construction!</p>
+            <p>Sorry this page is currently under construction!</p>
             <a href="/index.html"> <button class="go"> Go Backs  !"</button></a>
         </div>
 
