--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <section class="statusBar">
 
 <div class="usertext"> <!-- user name -->
-<div class="userName"> Hello , EvryOne</div> 
+<div class="userName"> Hello</div> 
 <div class="userBranch"> Master of Computer Application:</div>
 </div> 
 
