--- a/welcome.html
+++ b/welcome.html
@@ -29,9 +29,9 @@
 
 <script>
 
-// setTimeout(function() {
-//     window.location.href = 'index.html'; // Replace with the URL of the target page
-// }, 10000); // 10000 milliseconds = 10 seconds
+setTimeout(function() {
+    window.location.href = 'index.html'; // Replace with the URL of the target page
+}, 3000); // 10000 milliseconds = 10 seconds
 
 window.onscroll = function () { window.scrollTo(0, 0); };
 </script>
