--- a/underwork.html
+++ b/underwork.html
@@ -69,7 +69,7 @@
         <div class="unde-work-text">
             <h1>Under Construction</h1>
             <p>Sorry this page is currently under construction!</p>
-            <a href="/index.html"> <button class="go"> Go Backs  !"</button></a>
+            <a href="/index.html"> <button class="go"> Go Back !</button></a>
         </div>
 
     </section>
