--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 
  </div>
 </section>
+<button id="installButton" >Install App</button> <!-- Install button -->
 
 <!-------------- schedule text--------------- -->
 <section class="schedual-text-box" >
@@ -211,7 +212,8 @@
 
 <!------------------------------- schedule container tuesday------------------------------------------->
 
- 
+</section>
+<button id="installButton" style="display:none;">Install App</button> <!-- Install button -->
 
 <!--------------------------no classes--------------------------------------->
 <section class="no-class-container" id="noClass">
@@ -229,6 +231,7 @@
 
 
 </section>
+
 
 <script src="/js/main.js"></script>
 <script src="/js/api.js"></script>
