--- a/offline.html
+++ b/offline.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="manifest" href="/app.json">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Offline</title>
   <style>
