--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
   <meta name="theme-color" content="#000000">
-  
+
 <link rel="apple-touch-icon" href="/data/logo.png">
 
 <link rel="manifest" href="/app.json">
@@ -130,7 +130,7 @@
    </div>
    <div class="class-box" >                <!-- class box -------->
     <div class="classes classOne" >
-   <div class="classname">Sub:<span id="classnameOne"></span></div>
+   <div class="classname"><span id="classnameOne">Subject</span></div>
    <div class="techername"> Teachers: <span id="techerOne"></span></div>
    </div>
    </div> 
@@ -147,7 +147,7 @@
    </div>
    <div class="class-box" >              <!-- class box -------->
    <div class="classes classTwo">
-   <div class="classname">Sub: <span id="classnameTwo"></span></div>
+   <div class="classname"><span id="classnameTwo">Subject</span></div>
 
    <div class="techername"> Teachers: <span id="techerTwo"></span></div>
   </div>
@@ -165,7 +165,7 @@
   </div>
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classThree">
-  <div class="classname">Sub:<span id="classnameThree"></span></div>
+  <div class="classname"><span id="classnameThree">Subject</span></div>
   <div class="techername"> Teachers: <span id="techerThree"></span> </div>
  </div>
  </div> 
@@ -183,7 +183,7 @@
   </div>
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classFour">
-  <div class="classname"> Sub:<span id="classnameFour"></span></div>
+  <div class="classname"><span id="classnameFour">Subject</span></div>
   <div class="techername"> Teachers: <span id="techerFour"></span></div>
  </div>
  </div> 
@@ -201,7 +201,7 @@
   </div>
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classFive">
-  <div class="classname"> Sub: <span id="classnameFive"></span></div>
+  <div class="classname"><span id="classnameFive">Subject</span></div>
   <div class="techername"> Teachers: <span id="techerFive"></span> </div>
  </div>
  </div> 
