--- a/downlod.html
+++ b/downlod.html
@@ -27,15 +27,12 @@
             cursor: pointer;
             border-radius: 5px;
         }
-        #installButton.hidden {
-            display: none;
-        }
     </style>
 </head>
 <body>
     <div>
         <h1>Install Siksha App</h1>
-        <button id="installButton" class="hidden">Install App</button>
+        <button id="installButton" class="hidden">Install Siksha App</button>
     </div>
 
     <script>
