--- a/downlod.html
+++ b/downlod.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siksha PWA</title>
-    <link rel="manifest" href="app.json">
+    <link rel="manifest" href="/app.json">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -17,7 +17,6 @@
             margin: 0;
         }
         #installButton {
-
             padding: 10px 20px;
             background-color: #ff6f61;
             color: white;
