--- a/downlod.html
+++ b/downlod.html
@@ -17,7 +17,7 @@
             margin: 0;
         }
         #installButton {
-            display: none;
+            /* display: none; */
             padding: 10px 20px;
             background-color: #ff6f61;
             color: white;
