--- a/downlod.html
+++ b/downlod.html
@@ -17,7 +17,7 @@
             margin: 0;
         }
         #installButton {
-            /* display: none; */
+            display: none; /* Initially hidden */
             padding: 10px 20px;
             background-color: #ff6f61;
             color: white;
@@ -35,20 +35,36 @@
         let deferredPrompt;
         const installButton = document.getElementById('installButton');
 
-        window.addEventListener('beforeinstallprompt', (e) => {
-            console.log('beforeinstallprompt event triggered');
-            e.preventDefault();
-            deferredPrompt = e;
-            installButton.style.display = 'block';
-
-            installButton.addEventListener('click', () => {
-                installButton.style.display = 'none';
-                deferredPrompt.prompt();
-                deferredPrompt.userChoice.then((choiceResult) => {
-                    console.log(choiceResult.outcome);
-                    deferredPrompt = null;
+        // Register the service worker
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js').then((registration) => {
+                    console.log('ServiceWorker registration successful with scope: ', registration.scope);
+                }).catch((error) => {
+                    console.log('ServiceWorker registration failed: ', error);
                 });
             });
+        }
+
+        window.addEventListener('beforeinstallprompt', (e) => {
+            console.log('beforeinstallprompt event triggered');
+            e.preventDefault(); // Prevent the default install prompt
+            deferredPrompt = e; // Save the event
+            installButton.style.display = 'block'; // Show the button
+
+            installButton.addEventListener('click', () => {
+                installButton.style.display = 'none'; // Hide the button
+                deferredPrompt.prompt(); // Show the install prompt
+                deferredPrompt.userChoice.then((choiceResult) => {
+                    console.log('User response to the install prompt:', choiceResult.outcome);
+                    deferredPrompt = null; // Clear the deferredPrompt variable
+                });
+            });
+        });
+
+        // Optionally handle appinstalled event to log installation
+        window.addEventListener('appinstalled', (evt) => {
+            console.log('PWA was installed');
         });
     </script>
 
