--- a/offline.html
+++ b/offline.html
@@ -9,10 +9,16 @@
   <title>Offline</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
+font-family: Arial, sans-serif;
+width: 100%;
+height: 100vh;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
     }
+
+
     h1 {
       font-size: 24px;
       color: #333;
@@ -24,6 +30,7 @@
   </style>
 </head>
 <body>
+  <img src="/data/offline.gif" width="400px" alt="">
   <h1>You are offline</h1>
   <p>It seems you are not connected to the internet. Please check your connection and try again.</p>
 </body>
