--- a/offline.html
+++ b/offline.html
@@ -30,7 +30,7 @@ flex-direction: column;
   </style>
 </head>
 <body>
-  <img src="/data/offline.gif" width="400px" alt="">
+  <img src="/offline.gif" width="400px" alt="">
   <h1>You are offline</h1>
   <p>It seems you are not connected to the internet. Please check your connection and try again.</p>
 </body>
