--- a/offline.html
+++ b/offline.html
@@ -24,7 +24,7 @@ flex-direction: column;
       color: #333;
     }
     p {
-      font-size: 18px;
+      font-size: 15px;
       color: #666;
     }
   </style>
@@ -32,6 +32,7 @@ flex-direction: column;
 <body>
   <img src="/offline.gif" width="400px" alt="">
   <h1>You are offline</h1>
-  <p>It seems you are not connected to the internet. Please check your connection and try again.</p>
+  <p>It seems you are not connected to the internet </p>
+  <p> Please check your connection and try again.</p>
 </body>
 </html>
