--- a/offline.html
+++ b/offline.html
@@ -23,7 +23,7 @@ flex-direction: column;
       font-size: 24px;
       color: #333;
     }
-    p {
+    div {
       font-size: 15px;
       color: #666;
     }
@@ -32,7 +32,7 @@ flex-direction: column;
 <body>
   <img src="/offline.gif" width="400px" alt="">
   <h1>You are offline</h1>
-  <p>It seems you are not connected to the internet </p>
-  <p> Please check your connection and try again.</p>
+  <div>It seems you are not connected to the internet </div>
+  <div> Please check your connection and try again.</div>
 </body>
 </html>
