--- a/index.html
+++ b/index.html
@@ -217,8 +217,9 @@
 
 <div class="no-class">
 <div class="no-class-video">
-<video    autoplay loop muted   width="300px" >
-<source src="/data/noclas.mp4"  type="video/mp4"></video>
+<img    autoplay loop muted   width="300px" 
+src="/data/noclas.gif" 
+>
 </div>
 <div class="no-class-text-box">
 <div class="no-class-text1">Class has Ended</div>
