--- a/welcome.html
+++ b/welcome.html
@@ -11,15 +11,16 @@
 <section class="welcome-page">
 <div class="logo-video">
 
-    <img src="/data/welcom.gif" alt="welcom"  width="1000px" > 
+    <video id="myVideo"   autoplay loop muted   width="100%" >
+        <source src="/data/welcom.mp4"  type="video/mp4">
+    </video> 
     
 </div>
 
 <div class="text-box">
 
 <div class="text1">The only study App you'll ever need</div>
-<div class="text2">  designed to enhance learning by providing</div>
-<div  class="text3"> शिक्षा APP</div>
+<div class="text2">  designed to enhance learning by providing शिक्षा APP</div>
 
 
 </div>
