--- a/welcome.html
+++ b/welcome.html
@@ -11,9 +11,9 @@
 <section class="welcome-page">
 <div class="logo-video">
 
-    <video id="myVideo"   autoplay loop muted   width="100%" >
-        <source src="/data/welcom.mp4"  type="video/mp4">
-    </video> 
+    <img id="myVideo"    width="500px" 
+         src="/data/welcom.gif" >
+
     
 </div>
 
