--- a/welcome.html
+++ b/welcome.html
@@ -20,8 +20,8 @@
 <div class="text-box">
 
 <div class="text1">The only study App you'll ever need</div>
-<div class="text2">  designed to enhance learning by providing शिक्षा APP</div>
-
+<div class="text2">  designed to enhance learning by providing </div>
+<div class="text2">शिक्षा APP</div>
 
 </div>
 </section>
