--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div class="add">
 
 <div class="date-time">
-<div id="date">07/07/2004</div>
+<div id="date">07/08/2004</div>
 <div id="time"></div></div>
 
  <div class="add-text">  #Simple Way to find  your Class !</div> 
@@ -60,7 +60,7 @@
 
 <section class="courses-text-box">
   <div class="courses-text">Your Courses</div>
-  <div class="courses-text2">Your Runing Subject</div>
+  <div class="courses-text2">Your Running Subject</div>
 </section>
 
 <!-- courses-box container -->
@@ -97,7 +97,7 @@
 
   <div class="menu" id="timeTabel"><div class="menu-img"> <img src="/data/calendar.png" width="70%" alt=""></div> <div class="menu-name">Time-table</div>  </div>
   <div class="menu" id="notification"><div class="menu-img"> <img src="/data/notification.png" width="70%" alt=""></div> <div class="menu-name">Notification</div>  </div>
-  <div class="menu" id="mark"><div class="menu-img"> <img src="/data/stamp.png" width="70%" alt=""></div> <div class="menu-name">Mark</div>  </div>  
+  <div class="menu" id="mark"><div class="menu-img"> <img src="/data/stamp.png" width="70%" alt=""></div> <div class="menu-name">Marks</div>  </div>  
 </div>
 
  </div>
