--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 </div> 
 
 <div class="userimg">  <!-- user img-->
-<div class="img"></div>
+<!-- <div class="img"></div> -->
+ <img src="/data/login-icon.png" alt="" width="25px">
 </div> 
 
 </section>
