--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <div class="userimg">  <!-- user img-->
 <!-- <div class="img"></div> -->
- <img src="/data/login-icon.png" alt="" width="25px">
+ <img id="loginIcon" src="/data/login-icon.png"  alt="" width="25px">
 </div> 
 
 </section>
