--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div id="date">07/08/2004</div>
 <div id="time"></div></div>
 
- <div class="add-text">  #Simple Way to find  your Class !</div> 
+ <div class="add-text">  #Simple Way to find  your Class  <a href="/page/just.html"> ! </a></div> 
 
  <div class="add-img">
  <img src="/data/add.png"  height="100%" alt=""> </div>
@@ -223,7 +223,7 @@ src="/data/noclas.gif"
 >
 </div>
 <div class="no-class-text-box">
-<div class="no-class-text1">Class has Ended</div>
+<div class="no-class-text1">Class has Ended </div>
 <div class="no-class-text2">"Time to review what you've learned and prepare from the next class! " </div>
 </div>
 </div>
