--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div id="date">07/08/2004</div>
 <div id="time"></div></div>
 
- <div class="add-text">  #Simple Way to find  your Class  <a href="/page/just.html"> ! </a></div> 
+ <div class="add-text">  #Simple Way to find  your Class  !</div> 
 
  <div class="add-img">
  <img src="/data/add.png"  height="100%" alt=""> </div>
