--- a/welcome.html
+++ b/welcome.html
@@ -3,8 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/welcom.css">
     <title>Document</title>
+    <style>
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    width: 100%;
+    overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.898);
+
+}
+.welcome-page{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.logo-video{
+    width: 100%;
+    height: 60%;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+ 
+}
+.text-box{
+    width: 100%;
+    height: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 15px;
+    flex-direction: column;
+    gap: 10px;
+
+}
+.text1{
+    font-size: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+     font-weight: 500px;
+     text-align: center;
+     /* background-color: rgba(188, 169, 98, 0.244); */
+}
+.text2{
+    color: gray;
+    font-size: 18px;
+    text-align: center;
+}
+.text3{
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+}
+#myVideo{
+    width: 800px;
+    height: 120%;
+ }
+    </style>
 </head>
 <body>
     
@@ -25,16 +86,12 @@
 
 </div>
 </section>
-
-
 <script>
-
 setTimeout(function() {
     window.location.href = 'index.html'; // Replace with the URL of the target page
 }, 2500); // 10000 milliseconds = 10 seconds
 
 window.onscroll = function () { window.scrollTo(0, 0); };
 </script>
-
 </body>
 </html>
