--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <!------------------------------- schedule container monday------------------------------------------->
 <section id="schedulecontainer">
 
-  <section id="monday" class="week-day">
+  <section id="weekDay" class="week-day">
 
   <section class="class-box-container">      <!-- 1st classes------------------------------------------->
    <div class="class-box-time">            <!-- time start and end -->
