--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="manifest" href="/app.json">
 
 </head>
-<body>
+<body oncontextmenu= "return false">
 
 <!-- status bar -->
 <section class="statusBar">
