--- a/welcome.html
+++ b/welcome.html
@@ -66,8 +66,7 @@ body{
     height: 120%;
  }
     </style>
-</head>
-<body>
+<body oncontextmenu= "return false">
     
 <section class="welcome-page">
 <div class="logo-video">
