--- a/offline.html
+++ b/offline.html
@@ -29,7 +29,7 @@ flex-direction: column;
     }
   </style>
 </head>
-<body>
+<body oncontextmenu= "return false">
   <img src="/offline.gif" width="400px" alt="">
   <h1>You are offline</h1>
   <div>It seems you are not connected to the internet </div>
