--- a/index.html
+++ b/index.html
@@ -187,6 +187,22 @@
 </section> 
 
 
+<section class="class-box-container">    <!-- 4th classes-------------------------------------------> 
+  <div class="class-box-time">          <!-- time start and end -->
+  <div class="class-start-time">4:00</div>
+  <div class="class-end-time">5:00</div>
+  </div>
+  <div class="class-box-timeline">      <!-- time line -------->
+  <div class="timeline-circle"> <div class="active-time activeTimeFive"></div></div>
+  <div class="timeline-line"></div>
+  </div>
+  <div class="class-box" >              <!-- class box -------->
+  <div class="classes classFive">
+  <div class="classname"><span id="classnameFive">Subject</span></div>
+  <div class="techername"> Teachers: <span id="techerFive"></span> </div>
+ </div>
+ </div> 
+</section> 
 
 </section>
 </section>
