--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="manifest" href="/app.json">
 
 </head>
-<body oncontextmenu= "return false">
+<body>
 
 <!-- status bar -->
 <section class="statusBar">
@@ -69,10 +69,12 @@
 
   <div class="scroll-container">
 
-    <div class="course-box" id="box1"><div class="course-img"><img src="/data/c++.png" alt=""> </div> <div class="course-name">c++</div> </div>
-    <div class="course-box" id="box2"><div class="course-img"><img src="/data/dbms.png" alt=""> </div> <div class="course-name">Dbms</div> </div>
-    <div class="course-box" id="box3"><div class="course-img"><img src="/data/math.png" alt=""> </div> <div class="course-name">Math</div> </div>
-    <div class="course-box" id="box4"><div class="course-img"><img src="/data/dsa.png" alt=""> </div> <div class="course-name">DSA</div> </div>
+    <div class="course-box" id="box1"><div class="course-img"><img src="/data/c++.png" alt=""> </div> <div class="course-name">C#</div> </div>
+    <div class="course-box" id="box2"><div class="course-img"><img src="/data/python.png" alt=""> </div> <div class="course-name">Python Programming</div> </div>
+    <div class="course-box" id="box3"><div class="course-img"><img src="/data/math.png" alt=""> </div> <div class="course-name">Discrete Mathematics</div> </div>
+    <div class="course-box" id="box4"><div class="course-img"><img src="/data/dsa.png" alt=""> </div> <div class="course-name">Logic Design</div> </div>
+    <div class="course-box" id="box1"><div class="course-img"><img src="/data/english.png" alt=""> </div> <div class="course-name">Effective communication</div> </div>
+
   
   </div>
 </div>
@@ -188,8 +190,8 @@
 
 <section class="class-box-container">    <!-- 5th classes-------------------------------------------> 
   <div class="class-box-time">          <!-- time start and end -->
-  <div class="class-start-time">4:00</div>
-  <div class="class-end-time">5:00</div>
+  <div class="class-start-time">5:45</div>
+  <div class="class-end-time">6:45</div>
   </div>
   <div class="class-box-timeline">      <!-- time line -------->
   <div class="timeline-circle"> <div class="active-time activeTimeFive"></div></div>
