--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siksha</title>
-    <link rel="stylesheet" href="/css/hiden.css">
+
+     <link rel="stylesheet" href="/css/main.css">
+     <link rel="stylesheet" href="/css/animation.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -105,114 +107,52 @@
  </div>
 </section>
 
-<!-------------- schedule text--------------- -->
-<section class="schedual-text-box" >
-  <div class="schedual-text">Your Schedule</div>
+<!-- live class text -->
+<section class="live-class-text-box">
 
-  <div class="schedual-text2">   <span id="day-name"> </span> upcoming Classes and tasks</div>
-
+  <div class="live-class-text">Live Classes</div>
+  <div class="live-class-tex2">1st Semester</div>
 </section>
 
-<!------------------------------- schedule container monday------------------------------------------->
-<section id="schedulecontainer">
+<!------------------------------- live classes box container ------------------------------------------->
+<section class="liveClass-box-container">
+  
+<div class="liveClass-box">
 
-  <section id="weekDay" class="week-day">
-
-  <section class="class-box-container">      <!-- 1st classes------------------------------------------->
-   <div class="class-box-time">            <!-- time start and end -->
-   <div class="class-start-time">1:45</div>
-   <div class="class-end-time">2:45</div>
-   </div>
-   <div class="class-box-timeline">       <!-- time line -------->
-   <div class="timeline-circle"> <div class="active-time activeTimeOne" ></div></div>
-   <div class="timeline-line"></div>
-   </div>
-   <div class="class-box" >                <!-- class box -------->
-    <div class="classes classOne" >
-   <div class="classname"><span id="classnameOne">Subject</span></div>
-   <div class="techername"> Teachers: <span id="techerOne"></span></div>
-   </div>
-   </div> 
-</section> 
-
-<section class="class-box-container">    <!-- 2nd classes-------------------------------------------> 
-   <div class="class-box-time">          <!-- time start and end -->
-   <div class="class-start-time">2:45</div>
-   <div class="class-end-time">3:45</div>
-   </div>
-   <div class="class-box-timeline">      <!-- time line -------->
-   <div class="timeline-circle"> <div class="active-time activeTimeTwo"></div></div>
-   <div class="timeline-line"></div>
-   </div>
-   <div class="class-box" >              <!-- class box -------->
-   <div class="classes classTwo">
-   <div class="classname"><span id="classnameTwo">Subject</span></div>
-
-   <div class="techername"> Teachers: <span id="techerTwo"></span></div>
+  <div class="liveclass-text-area">
+    <div class="loader">
+      <p>loading</p>
+      <div class="words">
+        <span class="word">Live Class</span>
+        <span class="word">Time table</span>
+        <span class="word">Exam</span>
+        <span class="word">Holiday</span>
+        <span class="word">Time</span>
+      </div>
+    </div>
   </div>
-  </div> 
-</section> 
+<!-- button container area -->
 
-<section class="class-box-container">    <!-- 3rd classes-------------------------------------------> 
-  <div class="class-box-time">          <!-- time start and end -->
-  <div class="class-start-time">3:45</div>
-  <div class="class-end-time">4:45</div>
-  </div>
-  <div class="class-box-timeline">      <!-- time line -------->
-  <div class="timeline-circle"> <div class="active-time activeTimeThree"></div></div>
-  <div class="timeline-line"></div>
-  </div>
-  <div class="class-box" >              <!-- class box -------->
-  <div class="classes classThree">
-  <div class="classname"><span id="classnameThree">Subject</span></div>
-  <div class="techername"> Teachers: <span id="techerThree"></span> </div>
- </div>
- </div> 
-</section> 
-
-
-<section class="class-box-container">    <!-- 4th classes-------------------------------------------> 
-  <div class="class-box-time">          <!-- time start and end -->
-  <div class="class-start-time">4:45</div>
-  <div class="class-end-time">5:45</div>
-  </div>
-  <div class="class-box-timeline">      <!-- time line -------->
-  <div class="timeline-circle"> <div class="active-time activeTimeFour"></div></div>
-  <div class="timeline-line"></div>
-  </div>
-  <div class="class-box" >              <!-- class box -------->
-  <div class="classes classFour">
-  <div class="classname"><span id="classnameFour">Subject</span></div>
-  <div class="techername"> Teachers: <span id="techerFour"></span></div>
- </div>
- </div> 
-</section> 
-
-<section class="class-box-container">    <!-- 5th classes-------------------------------------------> 
-  <div class="class-box-time">          <!-- time start and end -->
-  <div class="class-start-time">5:45</div>
-  <div class="class-end-time">6:45</div>
-  </div>
-  <div class="class-box-timeline">      <!-- time line -------->
-  <div class="timeline-circle"> <div class="active-time activeTimeFive"></div></div>
-  <div class="timeline-line"></div>
-  </div>
-  <div class="class-box" >              <!-- class box -------->
-  <div class="classes classFive">
-  <div class="classname"><span id="classnameFive">Subject</span></div>
-  <div class="techername"> Teachers: <span id="techerFive"></span> </div>
- </div>
- </div> 
-</section> 
+<div class="liveclass-button-box">
+  <div class="circle-button" id="circleButton">
+    <span class="plus-icon">+</span>
+    <div class="options" id="options">
+        <div class="option">A1</div>
+        <div class="option">A2</div>
+        <div class="option">B1</div>
+        <div class="option">B2</div>
+        <div class="option">C1</div>
+        <div class="option">C2</div>
+    </div>
+</div>
+</div>
+  
+</div>
 
 
 
+  
 </section>
-</section>
-
-
-<!------------------------------- schedule container tuesday------------------------------------------->
-
  
 
 <!--------------------------no classes--------------------------------------->
@@ -234,7 +174,6 @@ src="/data/noclas.gif"
 </section>
 
 <script src="/js/main.js"></script>
-<script src="/js/api.js"></script>
 <script src="/js/link.js"></script>
 
  <script> 
