--- a/index.html
+++ b/index.html
@@ -137,12 +137,13 @@
   <div class="circle-button" id="circleButton">
     <span class="plus-icon">+</span>
     <div class="options" id="options">
-        <div class="option">A1</div>
+          <div class="option">A1</div>
         <div class="option">A2</div>
-        <div class="option">B1</div>
+        <div id="b1" class="option">B1</div>
         <div class="option">B2</div>
-        <div class="option">C1</div>
+        <div id="c1" class="option" >C1</div>
         <div class="option">C2</div>
+
     </div>
 </div>
 </div>
