--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <section class="statusBar">
 
 <div class="usertext"> <!-- user name -->
-<div class="userName"> Hello </div> 
+<div class="userName" id="me"> Hello </div> 
 <div class="userBranch"> Master of Computer Application:</div>
 </div> 
 
@@ -143,6 +143,7 @@
         <div class="option">B2</div>
         <div id="c1" class="option" >C1</div>
         <div class="option">C2</div>
+        <div class="" id="plusoption" >+</div>
 
     </div>
 </div>
