--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         <span class="word">Time</span>
       </div>
     </div>
+    <div class="loder-tex2">Please select the section</div>
   </div>
 <!-- button container area -->
 
@@ -161,7 +162,7 @@
 
 <!-- class show -->
 
-<section class="schedual-text-box" >
+<section class="schedual-text-box" id="schedualTextBox" >
   <div class="schedual-text"> 
     Your Schedule -- <span id="secName"></span></div>
 
