this is the new main update

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 
   <section class="class-box-container">      <!-- 1st classes------------------------------------------->
    <div class="class-box-time">            <!-- time start and end -->
-   <div class="class-start-time">1:45</div>
-   <div class="class-end-time">2:45</div>
+   <div class="class-start-time">8:00</div>
+   <div class="class-end-time">9:00</div>
    </div>
    <div class="class-box-timeline">       <!-- time line -------->
    <div class="timeline-circle"> <div class="active-time activeTimeOne" ></div></div>
@@ -194,8 +194,8 @@
 
 <section class="class-box-container">    <!-- 2nd classes-------------------------------------------> 
    <div class="class-box-time">          <!-- time start and end -->
-   <div class="class-start-time">2:45</div>
-   <div class="class-end-time">3:45</div>
+   <div class="class-start-time">9:00</div>
+   <div class="class-end-time">10:00</div>
    </div>
    <div class="class-box-timeline">      <!-- time line -------->
    <div class="timeline-circle"> <div class="active-time activeTimeTwo"></div></div>
@@ -212,8 +212,8 @@
 
 <section class="class-box-container">    <!-- 3rd classes-------------------------------------------> 
   <div class="class-box-time">          <!-- time start and end -->
-  <div class="class-start-time">3:45</div>
-  <div class="class-end-time">4:45</div>
+  <div class="class-start-time">10:00</div>
+  <div class="class-end-time">11:00</div>
   </div>
   <div class="class-box-timeline">      <!-- time line -------->
   <div class="timeline-circle"> <div class="active-time activeTimeThree"></div></div>
@@ -230,8 +230,8 @@
 
 <section class="class-box-container">    <!-- 4th classes-------------------------------------------> 
   <div class="class-box-time">          <!-- time start and end -->
-  <div class="class-start-time">4:45</div>
-  <div class="class-end-time">5:45</div>
+  <div class="class-start-time">11:00</div>
+  <div class="class-end-time">12:00</div>
   </div>
   <div class="class-box-timeline">      <!-- time line -------->
   <div class="timeline-circle"> <div class="active-time activeTimeFour"></div></div>
@@ -247,8 +247,8 @@
 
 <section class="class-box-container">    <!-- 5th classes-------------------------------------------> 
   <div class="class-box-time">          <!-- time start and end -->
-  <div class="class-start-time">5:45</div>
-  <div class="class-end-time">6:45</div>
+  <div class="class-start-time">12:00</div>
+  <div class="class-end-time">1:00</div>
   </div>
   <div class="class-box-timeline">      <!-- time line -------->
   <div class="timeline-circle"> <div class="active-time activeTimeFive"></div></div>
@@ -261,6 +261,77 @@
  </div>
  </div> 
 </section> 
+
+<section class="class-box-container">    <!-- 6th classes-------------------------------------------> 
+  <div class="class-box-time">          <!-- time start and end -->
+  <div class="class-start-time">2:00</div>
+  <div class="class-end-time">3:00</div>
+  </div>
+  <div class="class-box-timeline">      <!-- time line -------->
+  <div class="timeline-circle"> <div class="active-time activeTimeSix"></div></div>
+  <div class="timeline-line"></div>
+  </div>
+  <div class="class-box" >              <!-- class box -------->
+  <div class="classes classFive">
+  <div class="classname"><span id="classnameSix">Subject</span></div>
+  <div class="techername"> Teachers: <span id="techerSix"></span> </div>
+ </div>
+ </div> 
+</section> 
+
+<section class="class-box-container">    <!-- 7th classes-------------------------------------------> 
+  <div class="class-box-time">          <!-- time start and end -->
+  <div class="class-start-time">3:00</div>
+  <div class="class-end-time">4:00</div>
+  </div>
+  <div class="class-box-timeline">      <!-- time line -------->
+  <div class="timeline-circle"> <div class="active-time activeTimeSeven"></div></div>
+  <div class="timeline-line"></div>
+  </div>
+  <div class="class-box" >              <!-- class box -------->
+  <div class="classes classFive">
+  <div class="classname"><span id="classnameSeven">Subject</span></div>
+  <div class="techername"> Teachers: <span id="techerSeven"></span> </div>
+ </div>
+ </div> 
+</section> 
+
+<section class="class-box-container">    <!-- 8th classes-------------------------------------------> 
+  <div class="class-box-time">          <!-- time start and end -->
+  <div class="class-start-time">4:00</div>
+  <div class="class-end-time">5:00</div>
+  </div>
+  <div class="class-box-timeline">      <!-- time line -------->
+  <div class="timeline-circle"> <div class="active-time activeTimeEight"></div></div>
+  <div class="timeline-line"></div>
+  </div>
+  <div class="class-box" >              <!-- class box -------->
+  <div class="classes classFive">
+  <div class="classname"><span id="classnameEight">Subject</span></div>
+  <div class="techername"> Teachers: <span id="techerEight"></span> </div>
+ </div>
+ </div> 
+</section> 
+
+<section class="class-box-container">    <!-- 9th classes-------------------------------------------> 
+  <div class="class-box-time">          <!-- time start and end -->
+  <div class="class-start-time">5:00</div>
+  <div class="class-end-time">6:00</div>
+  </div>
+  <div class="class-box-timeline">      <!-- time line -------->
+  <div class="timeline-circle"> <div class="active-time activeTimeNine"></div></div>
+  <div class="timeline-line"></div>
+  </div>
+  <div class="class-box" >              <!-- class box -------->
+  <div class="classes classFive">
+  <div class="classname"><span id="classnameNine">Subject</span></div>
+  <div class="techername"> Teachers: <span id="techerNine"></span> </div>
+ </div>
+ </div> 
+</section> 
+
+
+
 
 
 
@@ -289,6 +360,7 @@ src="/data/noclas.gif"
 <script src="/js/main.js"></script>
 <script src="/js/link.js"></script>
 <script src="/js/api.js"></script>
+<script src="/js/timesedul.js"></script>
 
  <script> 
 if (!navigator.serviceWorker.controller) {
