--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ src="/data/noclas.gif"
 >
 </div>
 <div class="no-class-text-box">
-<div class="no-class-text1">Class has Ended </div>
+<div class="no-class-text1">NO CLASS  ! </div>
 <div class="no-class-text2">"Time to review what you've learned and prepare from the next class! " </div>
 </div>
 </div>
