--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
 
 <section class="class-box-container">    <!-- 6th classes-------------------------------------------> 
   <div class="class-box-time">          <!-- time start and end -->
-  <div class="class-start-time">2:00</div>
-  <div class="class-end-time">3:00</div>
+  <div class="class-start-time">1:00</div>
+  <div class="class-end-time">2:00</div>
   </div>
   <div class="class-box-timeline">      <!-- time line -------->
   <div class="timeline-circle"> <div class="active-time activeTimeSix"></div></div>
@@ -281,8 +281,8 @@
 
 <section class="class-box-container">    <!-- 7th classes-------------------------------------------> 
   <div class="class-box-time">          <!-- time start and end -->
-  <div class="class-start-time">3:00</div>
-  <div class="class-end-time">4:00</div>
+  <div class="class-start-time">2:00</div>
+  <div class="class-end-time">3:00</div>
   </div>
   <div class="class-box-timeline">      <!-- time line -------->
   <div class="timeline-circle"> <div class="active-time activeTimeSeven"></div></div>
@@ -298,8 +298,8 @@
 
 <section class="class-box-container">    <!-- 8th classes-------------------------------------------> 
   <div class="class-box-time">          <!-- time start and end -->
-  <div class="class-start-time">4:00</div>
-  <div class="class-end-time">5:00</div>
+  <div class="class-start-time">3:00</div>
+  <div class="class-end-time">4:00</div>
   </div>
   <div class="class-box-timeline">      <!-- time line -------->
   <div class="timeline-circle"> <div class="active-time activeTimeEight"></div></div>
@@ -315,8 +315,8 @@
 
 <section class="class-box-container">    <!-- 9th classes-------------------------------------------> 
   <div class="class-box-time">          <!-- time start and end -->
-  <div class="class-start-time">5:00</div>
-  <div class="class-end-time">6:00</div>
+  <div class="class-start-time">4:00</div>
+  <div class="class-end-time">5:00</div>
   </div>
   <div class="class-box-timeline">      <!-- time line -------->
   <div class="timeline-circle"> <div class="active-time activeTimeNine"></div></div>
@@ -330,6 +330,23 @@
  </div> 
 </section> 
 
+
+<section class="class-box-container">    <!-- 10th classes-------------------------------------------> 
+  <div class="class-box-time">          <!-- time start and end -->
+  <div class="class-start-time">5:00</div>
+  <div class="class-end-time">6:00</div>
+  </div>
+  <div class="class-box-timeline">      <!-- time line -------->
+  <div class="timeline-circle"> <div class="active-time activeTimeTen"></div></div>
+  <div class="timeline-line"></div>
+  </div>
+  <div class="class-box" >              <!-- class box -------->
+  <div class="classes classFive">
+  <div class="classname"><span id="classnameTen">Subject</span></div>
+  <div class="techername"> Teachers: <span id="techerTen"></span> </div>
+ </div>
+ </div> 
+</section> 
 
 
 
