--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
   <div class="timeline-line"></div>
   </div>
   <div class="class-box" >              <!-- class box -------->
-  <div class="classes classFive">
+  <div class="classes classSix">
   <div class="classname"><span id="classnameSix">Subject</span></div>
   <div class="techername"> Teachers: <span id="techerSix"></span> </div>
  </div>
@@ -289,7 +289,7 @@
   <div class="timeline-line"></div>
   </div>
   <div class="class-box" >              <!-- class box -------->
-  <div class="classes classFive">
+  <div class="classes classSeven">
   <div class="classname"><span id="classnameSeven">Subject</span></div>
   <div class="techername"> Teachers: <span id="techerSeven"></span> </div>
  </div>
@@ -306,7 +306,7 @@
   <div class="timeline-line"></div>
   </div>
   <div class="class-box" >              <!-- class box -------->
-  <div class="classes classFive">
+  <div class="classes classEight">
   <div class="classname"><span id="classnameEight">Subject</span></div>
   <div class="techername"> Teachers: <span id="techerEight"></span> </div>
  </div>
@@ -323,7 +323,7 @@
   <div class="timeline-line"></div>
   </div>
   <div class="class-box" >              <!-- class box -------->
-  <div class="classes classFive">
+  <div class="classes classTen">
   <div class="classname"><span id="classnameNine">Subject</span></div>
   <div class="techername"> Teachers: <span id="techerNine"></span> </div>
  </div>
@@ -341,7 +341,7 @@
   <div class="timeline-line"></div>
   </div>
   <div class="class-box" >              <!-- class box -------->
-  <div class="classes classFive">
+  <div class="classes classTen">
   <div class="classname"><span id="classnameTen">Subject</span></div>
   <div class="techername"> Teachers: <span id="techerTen"></span> </div>
  </div>
@@ -374,9 +374,9 @@ src="/data/noclas.gif"
 
 </section>
 
-<script src="/js/main.js"></script>
-<script src="/js/link.js"></script>
-<script src="/js/api.js"></script>
+<!-- <script src="/js/main.js"></script> -->
+<!-- <script src="/js/link.js"></script> -->
+<!-- <script src="/js/api.js"></script> -->
 <script src="/js/timesedul.js"></script>
 
  <script> 
