--- a/index.html
+++ b/index.html
@@ -374,9 +374,9 @@ src="/data/noclas.gif"
 
 </section>
 
-<!-- <script src="/js/main.js"></script> -->
-<!-- <script src="/js/link.js"></script> -->
-<!-- <script src="/js/api.js"></script> -->
+<script src="/js/main.js"></script>
+<script src="/js/link.js"></script>
+<script src="/js/api.js"></script>
 <script src="/js/timesedul.js"></script>
 
  <script> 
