--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <!-- status bar -->
 <section class="statusBar">
 
+
+  
 <div class="usertext"> <!-- user name -->
 <div class="userName" id="me"> Hello </div> 
 <div class="userBranch"> Master of Computer Application:</div>
@@ -313,6 +315,7 @@
  </div> 
 </section> 
 
+
 <section class="class-box-container">    <!-- 9th classes-------------------------------------------> 
   <div class="class-box-time">          <!-- time start and end -->
   <div class="class-start-time">4:00</div>
@@ -323,7 +326,7 @@
   <div class="timeline-line"></div>
   </div>
   <div class="class-box" >              <!-- class box -------->
-  <div class="classes classTen">
+  <div class="classes classNine">
   <div class="classname"><span id="classnameNine">Subject</span></div>
   <div class="techername"> Teachers: <span id="techerNine"></span> </div>
  </div>
@@ -331,7 +334,8 @@
 </section> 
 
 
-<section class="class-box-container">    <!-- 10th classes-------------------------------------------> 
+
+<section class="class-box-container">    <!-- 8th classes-------------------------------------------> 
   <div class="class-box-time">          <!-- time start and end -->
   <div class="class-start-time">5:00</div>
   <div class="class-end-time">6:00</div>
