--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <div class="circle-button" id="circleButton">
     <span class="plus-icon">+</span>
     <div class="options" id="options">
-          <div class="option">A1</div>
+          <div id="a1" class="option" >A1</div>
         <div class="option">A2</div>
         <div id="b1" class="option">B1</div>
         <div class="option">B2</div>
