--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <span class="plus-icon">+</span>
     <div class="options" id="options">
           <div id="a1" class="option" >A1</div>
-        <div class="option">A2</div>
+        <div  id="a2" class="option">A2</div>
         <div id="b1" class="option">B1</div>
         <div class="option">B2</div>
         <div id="c1" class="option" >C1</div>
