--- a/index.html
+++ b/index.html
@@ -145,9 +145,8 @@
           <div id="a1" class="option" >A1</div>
         <div  id="a2" class="option">A2</div>
         <div id="b1" class="option">B1</div>
-        <div class="option">B2</div>
+        <div id="b2" class="option">B2</div>
         <div id="c1" class="option" >C1</div>
-        <div class="option">C2</div>
         <div class="" id="plusoption" >+</div>
 
     </div>
