--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
    </div>
    <div class="class-box" >                <!-- class box -------->
     <div class="classes classOne" >
-   <div class="classname"><span id="classnameOne">Subject</span></div>
-   <div class="techername"> Teachers: <span id="techerOne"></span></div>
+   <div class="classname"><span id="classnameOne">NO CLASS</span></div>
+   <div class="techername"> Teachers: -X- <span id="techerOne"></span></div>
    </div>
    </div> 
 </section> 
@@ -204,9 +204,9 @@
    </div>
    <div class="class-box" >              <!-- class box -------->
    <div class="classes classTwo">
-   <div class="classname"><span id="classnameTwo">Subject</span></div>
+   <div class="classname"><span id="classnameTwo">NO CLASS</span></div>
 
-   <div class="techername"> Teachers: <span id="techerTwo"></span></div>
+   <div class="techername"> Teachers: -X- <span id="techerTwo"></span></div>
   </div>
   </div> 
 </section> 
@@ -222,8 +222,8 @@
   </div>
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classThree">
-  <div class="classname"><span id="classnameThree">Subject</span></div>
-  <div class="techername"> Teachers: <span id="techerThree"></span> </div>
+  <div class="classname"><span id="classnameThree">NO CLASS</span></div>
+  <div class="techername"> Teachers: -X- <span id="techerThree"></span> </div>
  </div>
  </div> 
 </section> 
@@ -240,8 +240,8 @@
   </div>
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classFour">
-  <div class="classname"><span id="classnameFour">Subject</span></div>
-  <div class="techername"> Teachers: <span id="techerFour"></span></div>
+  <div class="classname"><span id="classnameFour">NO CLASS</span></div>
+  <div class="techername"> Teachers: -X- <span id="techerFour"></span></div>
  </div>
  </div> 
 </section> 
@@ -257,8 +257,8 @@
   </div>
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classFive">
-  <div class="classname"><span id="classnameFive">Subject</span></div>
-  <div class="techername"> Teachers: <span id="techerFive"></span> </div>
+  <div class="classname"><span id="classnameFive">NO CLASS</span></div>
+  <div class="techername"> Teachers: -X-<span id="techerFive"></span> </div>
  </div>
  </div> 
 </section> 
@@ -274,8 +274,8 @@
   </div>
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classSix">
-  <div class="classname"><span id="classnameSix">Subject</span></div>
-  <div class="techername"> Teachers: <span id="techerSix"></span> </div>
+  <div class="classname"><span id="classnameSix">LUNCH BREAK</span></div>
+  <div class="techername"> "Take a break? Don't worry, my app will still be here <span id="techerSix"></span> </div>
  </div>
  </div> 
 </section> 
@@ -291,8 +291,8 @@
   </div>
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classSeven">
-  <div class="classname"><span id="classnameSeven">Subject</span></div>
-  <div class="techername"> Teachers: <span id="techerSeven"></span> </div>
+  <div class="classname"><span id="classnameSeven">NO CLASS</span></div>
+  <div class="techername"> Teachers: -X-<span id="techerSeven"></span> </div>
  </div>
  </div> 
 </section> 
@@ -308,8 +308,8 @@
   </div>
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classEight">
-  <div class="classname"><span id="classnameEight">Subject</span></div>
-  <div class="techername"> Teachers: <span id="techerEight"></span> </div>
+  <div class="classname"><span id="classnameEight">NO CLASS</span></div>
+  <div class="techername"> Teachers: -X- <span id="techerEight"></span> </div>
  </div>
  </div> 
 </section> 
@@ -326,8 +326,8 @@
   </div>
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classNine">
-  <div class="classname"><span id="classnameNine">Subject</span></div>
-  <div class="techername"> Teachers: <span id="techerNine"></span> </div>
+  <div class="classname"><span id="classnameNine">NO CLASS</span></div>
+  <div class="techername"> Teachers: -X- <span id="techerNine"></span> </div>
  </div>
  </div> 
 </section> 
@@ -345,8 +345,8 @@
   </div>
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classTen">
-  <div class="classname"><span id="classnameTen">Subject</span></div>
-  <div class="techername"> Teachers: <span id="techerTen"></span> </div>
+  <div class="classname"><span id="classnameTen">NO CLASS</span></div>
+  <div class="techername"> Teachers: -X- <span id="techerTen"></span> </div>
  </div>
  </div> 
 </section> 
