--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
    <div class="class-box" >                <!-- class box -------->
     <div class="classes classOne" >
    <div class="classname"><span id="classnameOne">NO CLASS</span></div>
-   <div class="techername"> Teachers: -X- <span id="techerOne"></span></div>
+   <div class="techername"> Teachers :<span id="techerOne">-X-</span></div>
    </div>
    </div> 
 </section> 
@@ -206,7 +206,7 @@
    <div class="classes classTwo">
    <div class="classname"><span id="classnameTwo">NO CLASS</span></div>
 
-   <div class="techername"> Teachers: -X- <span id="techerTwo"></span></div>
+   <div class="techername"> Teachers :<span id="techerTwo">-X-</span></div>
   </div>
   </div> 
 </section> 
@@ -223,7 +223,7 @@
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classThree">
   <div class="classname"><span id="classnameThree">NO CLASS</span></div>
-  <div class="techername"> Teachers: -X- <span id="techerThree"></span> </div>
+  <div class="techername"> Teachers :<span id="techerThree">-X-</span> </div>
  </div>
  </div> 
 </section> 
@@ -241,7 +241,7 @@
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classFour">
   <div class="classname"><span id="classnameFour">NO CLASS</span></div>
-  <div class="techername"> Teachers: -X- <span id="techerFour"></span></div>
+  <div class="techername"> Teachers :<span id="techerFour">-X-</span></div>
  </div>
  </div> 
 </section> 
@@ -258,7 +258,7 @@
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classFive">
   <div class="classname"><span id="classnameFive">NO CLASS</span></div>
-  <div class="techername"> Teachers: -X-<span id="techerFive"></span> </div>
+  <div class="techername"> Teachers :<span id="techerFive">-X-</span> </div>
  </div>
  </div> 
 </section> 
@@ -275,7 +275,7 @@
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classSix">
   <div class="classname"><span id="classnameSix">LUNCH BREAK</span></div>
-  <div class="techername"> "Take a break? Don't worry, my app will still be here <span id="techerSix"></span> </div>
+  <div class="techername"> "Take a break? Don't worry, my app will still be here" <span id="techerSix"></span> </div>
  </div>
  </div> 
 </section> 
@@ -292,7 +292,7 @@
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classSeven">
   <div class="classname"><span id="classnameSeven">NO CLASS</span></div>
-  <div class="techername"> Teachers: -X-<span id="techerSeven"></span> </div>
+  <div class="techername"> Teachers :<span id="techerSeven">-X-</span> </div>
  </div>
  </div> 
 </section> 
@@ -309,7 +309,7 @@
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classEight">
   <div class="classname"><span id="classnameEight">NO CLASS</span></div>
-  <div class="techername"> Teachers: -X- <span id="techerEight"></span> </div>
+  <div class="techername"> Teachers :<span id="techerEight">-X-</span> </div>
  </div>
  </div> 
 </section> 
@@ -327,7 +327,7 @@
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classNine">
   <div class="classname"><span id="classnameNine">NO CLASS</span></div>
-  <div class="techername"> Teachers: -X- <span id="techerNine"></span> </div>
+  <div class="techername"> Teachers :<span id="techerNine">-X-</span> </div>
  </div>
  </div> 
 </section> 
@@ -346,7 +346,7 @@
   <div class="class-box" >              <!-- class box -------->
   <div class="classes classTen">
   <div class="classname"><span id="classnameTen">NO CLASS</span></div>
-  <div class="techername"> Teachers: -X- <span id="techerTen"></span> </div>
+  <div class="techername"> Teachers :<span id="techerTen">-X-</span> </div>
  </div>
  </div> 
 </section> 
