--- a/index.html
+++ b/index.html
@@ -139,6 +139,15 @@
 <!-- button container area -->
 
 <div class="liveclass-button-box">
+
+
+  <div class="circle-refresh" id="circleRefresh"> 
+    <i class="fa-solid fa-arrows-rotate color"></i>
+  </div>
+
+
+
+
   <div class="circle-button" id="circleButton">
     <span class="plus-icon">+</span>
     <div class="options" id="options">
@@ -151,6 +160,11 @@
 
     </div>
 </div>
+
+
+
+
+
 </div>
   
 </div>
