--- a/welcome.html
+++ b/welcome.html
@@ -87,7 +87,7 @@ body{
 </section>
 <script>
 setTimeout(function() {
-    window.location.href = 'index.html'; // Replace with the URL of the target page
+    window.location.href = 'signup.html'; // Replace with the URL of the target page
 }, 2500); // 10000 milliseconds = 10 seconds
 
 window.onscroll = function () { window.scrollTo(0, 0); };
